<?xml version="1.0"?>
<package>
  <name>dynamixel_control</name>
  <version>0.1.0</version>
  <description>The dynamixel_control package</description>
  <maintainer email="pigheadx@gmail.com">Ph.X</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/pigheadx/dynamixel_control</url>
  <author email="pigheadx@gmail.com">Ph.X</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamixel_control_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamixel_control_msgs</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>dynamixel_workbench_toolbox</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <export/>
</package>
